Various updates from Java 8 and 9 features.